<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:background="@drawable/roundededitext"
        android:text=""
        android:elevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <EditText
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:autofillHints="false"
        android:inputType="none"
        android:text="@string/display"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clearBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/redbtn"
                android:elevation="10dp"
                android:onClick="clearBtn"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/kurungBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/ungubtn"
                android:elevation="10dp"
                android:onClick="kurungBtn"
                android:text="@string/kurung"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pangkatBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/ungubtn"
                android:elevation="10dp"
                android:onClick="pangkatBtn"
                android:text="@string/pangkat"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bagiBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greenbtn"
                android:elevation="10dp"
                android:onClick="bagiBtn"
                android:text="@string/bagi"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/oneBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/whitebtn"
                android:elevation="10dp"
                android:onClick="oneBtn"
                android:text="@string/one"
                android:textColor="@color/purple"
                android:textSize="22dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/twoBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/whitebtn"
                android:elevation="5dp"
                android:onClick="twoBtn"
                android:text="@string/two"
                android:textColor="@color/purple"
                android:textSize="22dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/threeBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/whitebtn"
                android:elevation="5dp"
                android:onClick="threeBtn"
                android:text="@string/three"
                android:textColor="@color/purple"
                android:textSize="22dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/kaliBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greenbtn"
                android:elevation="10dp"
                android:onClick="kaliBtn"
                android:text="@string/kali"
                android:textColor="@color/white"
                android:textSize="24dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fourBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/whitebtn"
                android:elevation="10dp"
                android:onClick="fourBtn"
                android:text="@string/four"
                android:textColor="@color/purple"
                android:textSize="22dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fiveBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/whitebtn"
                android:elevation="10dp"
                android:onClick="fiveBtn"
                android:text="@string/five"
                android:textColor="@color/purple"
                android:textSize="22dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sixBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/whitebtn"
                android:elevation="10dp"
                android:onClick="sixBtn"
                android:text="@string/six"
                android:textColor="@color/purple"
                android:textSize="22dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tambahbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greenbtn"
                android:elevation="10dp"
                android:onClick="tambahBtn"
                android:text="@string/tambah"
                android:textColor="@color/white"
                android:textSize="24dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sevenBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/whitebtn"
                android:elevation="10dp"
                android:onClick="sevenBtn"
                android:text="@string/seven"
                android:textColor="@color/purple"
                android:textSize="22dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/eightBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/whitebtn"
                android:elevation="10dp"
                android:onClick="eightBtn"
                android:text="@string/eight"
                android:textColor="@color/purple"
                android:textSize="22dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nineBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/whitebtn"
                android:elevation="10dp"
                android:onClick="nineBtn"
                android:text="@string/nine"
                android:textColor="@color/purple"
                android:textSize="22dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/kurangBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greenbtn"
                android:elevation="10dp"
                android:onClick="kurangBtn"
                android:text="@string/kurang"
                android:textColor="@color/white"
                android:textSize="24dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plusMinusBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/whitebtn"
                android:elevation="10dp"
                android:onClick="plusMinusBtn"
                android:text="@string/plusMinus"
                android:textColor="@color/purple"
                android:textSize="22dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zeroBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/whitebtn"
                android:elevation="10dp"
                android:onClick="zeroBtn"
                android:text="@string/zero"
                android:textColor="@color/purple"
                android:textSize="22dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pointBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/whitebtn"
                android:elevation="10dp"
                android:onClick="pointBtn"
                android:text="@string/point"
                android:textColor="@color/purple"
                android:textSize="20dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/samaDenganBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/yellowbtn"
                android:elevation="10dp"
                android:onClick="samaDenganBtn"
                android:text="@string/samaDengan"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>s

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button19"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:layout_margin="5dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/topbtn"
        android:elevation="10dp"
        android:onClick="backSpaceBtn"
        android:src="@drawable/backspace"
        android:text="@string/backSpace"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>